Source/WebCore/Modules/indexeddb/IDBOpenDBRequest.cpp
@@ -114,15 +114,6 @@ void IDBOpenDBRequest::onSuccess(PassRefPtr<IDBDatabaseBackendInterface> backend
         idbDatabase = m_result->idbDatabase();
         ASSERT(idbDatabase);
         ASSERT(!m_databaseCallbacks);
-
-        // If the connection closed between onUpgradeNeeded and onSuccess, an error
-        // should be fired instead of success. The back-end may not be aware of
-        // the closing state if the events are asynchronously delivered.
-        if (idbDatabase->isClosePending()) {
-            m_result.clear();
-            onError(IDBDatabaseError::create(IDBDatabaseException::IDB_ABORT_ERR, "The connection was closed."));
-            return;
-        }
     } else {
         ASSERT(m_databaseCallbacks);
         idbDatabase = IDBDatabase::create(scriptExecutionContext(), backend, m_databaseCallbacks);
@@ -143,6 +134,18 @@ bool IDBOpenDBRequest::shouldEnqueueEvent() const
     return true;
 }
 
+bool IDBOpenDBRequest::dispatchEvent(PassRefPtr<Event> event)
+{
+    // If the connection closed between onUpgradeNeeded and the delivery of the "success" event,
+    // an "error" event should be fired instead.
+    if (event->type() == eventNames().successEvent && m_result->idbDatabase()->isClosePending()) {
+        m_result.clear();
+        onError(IDBDatabaseError::create(IDBDatabaseException::IDB_ABORT_ERR, "The connection was closed."));
+        return false;
+    }
+
+    return IDBRequest::dispatchEvent(event);
+}
 
 } // namespace WebCore
 
